# rust-api-gateway

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
config/: gateway.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  router.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  balancer.rs  breaker.rs  cache.rs  health.rs  lib.rs  main.rs  proxy.rs  ratelimit.rs  server.rs  state.rs  transform.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: proxy.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: demo-script.md  design-decisions.md  interview-guide.md
scripts/: bench.sh  prometheus.yml
