[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/telemetry",
    "crates/gateway",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["abdulhai-unico <abdulh@unicostudio.co>"]
repository = "https://github.com/maverickkhan/rust-api-gateway"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server + client
axum = { version = "0.8", features = ["macros", "ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
jsonwebtoken = "9"

# Redis (distributed rate limiting)
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Errors / observability
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
