[package]
name = "gw-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reverse-proxy gateway runtime: routing, load balancing, resilience, auth, rate limiting, caching"
default-run = "gw-gateway"

[lib]
name = "gw_gateway"
path = "src/lib.rs"

[[bin]]
name = "gw-gateway"
path = "src/main.rs"

[dependencies]
gw-core = { path = "../core" }
gw-telemetry = { path = "../telemetry" }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
axum.workspace = true
http.workspace = true
bytes.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true }
