[package]
name = "gw-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracing and Prometheus metrics for the API gateway"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
once_cell = "1"
